<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MostrarDatos">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Titulo2"
        android:textSize="@dimen/tamaño_letra"
        android:textStyle="bold"
        android:layout_gravity="center"
        />



    <TextView
        android:id="@+id/tvp4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/p4"
        android:textSize="27dp"
        android:layout_marginTop="@dimen/espacio_top"/>

    <Button
        android:id="@+id/btnok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnok"
        android:layout_marginTop="@dimen/espacio_top"
        />

</LinearLayout>